--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,8 @@ body {
 }
 
 h1 {
+    padding-top: 3%;
+    padding-bottom: 1%;
     line-height: 50px; 
     color:black;
     font-size: 2.5rem;
@@ -19,6 +21,9 @@ h1 {
 }
 
 .intro p {
+    text-align: left;
+    padding-right: 30%;
+    padding-left: 30%;
     font-family: 'Montserrat', sans-serif;
     color:black;
     font-size: 1.25rem;
