--- a/styles.css
+++ b/styles.css
@@ -1,106 +1,109 @@
 body {
-    background-color: #7579e7;
-    margin: 0; 
-    text-align: center; 
-    font-family: 'Open Sans', sans-serif;
+    background: white;
 }
 
-h1 {
-    padding-top: 3%;
-    padding-bottom: 1%;
-    line-height: 50px; 
-    color: white;
-    font-size: 2.5rem;
-    margin: 50px auto 0 auto;
-    font-family: 'Open Sans', sans-serif;
+nav {
+    margin:0 !important;
+	padding: 0px !important;
+    /*
+    background-color: green; */
+    display: flex;
+    flex-direction: row;
 }
 
-.intro {
-    vertical-align: middle;
-    text-align: center;
+.nav-buttons {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    padding-right: 70%;
+    padding-top: 10px;
 }
 
-.intro p {
+.nav-buttons a { 
+    color: black;
+    text-decoration: none;
+    font-size: 16px;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: bold;  
+    position: relative;
+    padding-left: 30px;
+    padding-right: 60px;
+}
+
+
+.nav-buttons a::after {
+    content: '';
+    position: absolute;
+    width: 0; 
+    height: 2.5px; 
+    background-color: black;;
+    display: block;
+    margin: auto;
+    transition: 0.3s;
+    left: 0;
+    bottom: -5px;
+}
+.nav-buttons a:hover:after {
+    width: 100%;
+}
+
+.buttons {  
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    float: right;
+}
+
+.buttons a{
+    padding-top: 10px; 
+    padding-right: 40px;
+    color: black;
+    display: flex;
+    flex-direction: row;
+    align-content: flex-end;
+
+}
+
+.image{
+    content:url(/Images/me_pic2_rounded.png);
     text-align: left;
-    padding-right: 30%;
-    padding-left: 30%;
-    font-family: 'Open Sans', sans-serif;
-    color: white;
-    font-size: 1.25rem;
+    height: 550px;
+    padding-top: 40px;
+    padding-left: 350px;
+
+} 
+
+img {
+    max-width: 100%;
+    max-height: 100%;
 }
 
-ul {
-    margin: 0; 
+.bio-text h1 {
+    text-align: right;
+}
+
+.bio-text {
+    font-family: 'Ubuntu', sans-serif;
+    padding-left: 5%; 
+    padding-top: 5%;
+    text-align: right; 
+    width: 40%;
+
+}
+
+.bio {
+    display: flex;
+    justify-content: center;
+}
+
+.projects {
+    margin-left: 70px;
+    font-family: 'Ubuntu', sans-serif;
     padding: 0;
 }
 
-.footer li {
-    display: inline-block; 
-    margin: 6px; 
-    list-style: none; 
-}
-
-.footer li a {
-    color: #7579e7;
-    text-decoration: none;
-    font-size: 35px;
-}
-
-.footer li a:hover{
-    color: hotpink; 
-}
-
-.footer li a:active {
-    color: #b9fffc;
-    text-decoration: underline;
-  }
-
-.footer {
-    background-color: white;
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    text-align: center;
-    padding: 10px 0 10px;
-   
-}
-
-.footer p{
-    color: #7579e7;
-    font-family: 'Open Sans', sans-serif;
-    text-align: center; 
-}
-
-a:link {
-    color: white;
-    text-decoration: underline;
-    text-decoration-color: hotpink;
-  }
-  
-a:visited {
-    color: white;
-    text-decoration: underline;
-    text-decoration-color: hotpink;
-  } 
-  
-
-a:hover {
-    color: hotpink;
-    text-decoration: underline;
-    text-decoration-color: hotpink;
-  }
-  
-
-a:active {
-    color: #b9fffc;
-    text-decoration: underline;
-    text-decoration-color: hotpink;
-  }
-
-
-@media screen and (max-width: 900px) {
-    .bob{
-        margin-top: 100px;
-    }
+.projects p{
+    margin-left: 100px;
+    margin-top: 25px;
+    padding-bottom: 20%;
 }
