--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ nav {
     width: 100%;
     display: flex;
     flex-direction: row;
+    position: fixed;
 }
 
 .nav-buttons {
@@ -41,7 +42,7 @@ nav {
     position: absolute;
     width: 0; 
     height: 2.5px; 
-    background-color: black;;
+    background-color:#FB94E8 ;
     display: block;
     margin: auto;
     transition: 0.3s;
@@ -67,6 +68,14 @@ nav {
     flex-direction: row;
     align-content: flex-end;
 
+}
+
+.buttons a:hover {
+    color: #FB94E8 ;
+}
+
+.buttons a:active {
+    color: #FB94E8 ;
 }
 
 .image{
@@ -98,6 +107,7 @@ img {
 }
 
 .bio {
+    padding-top: 80px;
     display: flex;
     justify-content: center;
 }
@@ -121,4 +131,11 @@ img {
     margin-left: 100px;
     margin-top: 25px;
     padding-bottom: 20%;
+}
+
+nav.sticky {
+    background-color: white;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
